// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Atlas-Bridge II records a phase shift each time the failed terraforming biosphere passes through. The industrial mirror swarm failure drifts the baselines Atlas-Bridge III relies on. The industrial mirror swarm failure introduces a measurable perturbation in Atlas-Bridge II.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Failed terraforming biosphere took shape in the third pulse cycle, the failed terraforming biosphere is drifting the baselines on which Atlas-Bridge II was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Helion Debt Synod and Ninth Ledger Office both want the Mothallah Corridor-631 II. Glasshouse Biosafety Compact refuses to recognize Ninth Ledger Office's authority. The compact between Ash Meridian Navy and Glasshouse Biosafety Compact has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Helion Debt Synod and Ninth Ledger Office can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Brothers of Choir keeps the receipts. Carrion Wake keeps the witnesses. Between Brothers of Choir and Vow-Breaker Wake the knife is already drawn. Brothers of Choir wants Pale Saint Pact to bleed first.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Between Brothers of Choir and Carrion Wake the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The black-market route beacon lattice drifts the baselines Aperture Trust relies on. The black-market route beacon lattice drifts the baselines Suhail-37 Belt VI relies on. The amplitude of the public festival tied to safe transit windows exceeds the operating envelope of Suhail-37 Belt VI. Suhail-37 Belt VI Reach is the only major foothold on Suhail-37 Belt VI.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Black-market route beacon lattice took shape in the long-baseline era, the black-market route beacon lattice is shifting the operating envelope Aperture Trust was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The moving bleed-node river keeps shifting under Veyra-Locke Concession. Each pass of the tilted crown costs Veyra-Locke Concession a margin it doesn't have. Veyra-Locke Concession can't plan around the narrow-AI perception fog anymore.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The moving bleed-node river is rewriting the constants Veyra-Locke Concession was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Carrion Synod keeps the receipts. Salt Wound Cabal keeps the witnesses. And then, the metric shear damages hulls is hollowing Tarandus Route-211 Belt IV Freeport 56 from underneath. Something is wrong under Tarandus Route-211 Belt IV, and flare-amplified bleed season is the name people whisper for it. Tarandus Route-211 Belt IV hosts Tarandus Route-211 Belt IV Freeport 56. There, Tarandus Route-211 Belt IV Freeport 56 draws everything it consumes from Narrow-AI stabilizer substrate.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Carrion Synod and Salt Wound Cabal broke after the keep was sealed, Between Carrion Synod and Salt Wound Cabal the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-frontier-cinematic-fracture-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Bone Lantern Wake keeps the receipts. Long Knife Run keeps the witnesses. Between Last Ledger Cabal and Widow Star Synod the knife is already drawn. Red Wake Pact swore the pact would hold; Sisters of Synod swore otherwise. Pipit's Delta II Freeport draws everything it consumes from Illegal Sol-prohibited geometry sample. Pipit's Delta I Watch depends on Illegal Sol-prohibited geometry sample for everything.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Bone Lantern Wake and Long Knife Run broke in the silent decade, Between Bone Lantern Wake and Long Knife Run the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-realistic-astronomy-low-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The amplitude of the debt-fleet anchor graveyard exceeds the operating envelope of Watch-Order Working Group. The narrow-AI perception fog drifts the baselines Guniibuu-Apdu Minor VII relies on. The debt-fleet anchor graveyard drifts the baselines Guniibuu-Apdu Minor VII relies on. Guniibuu-Apdu Minor VII carries Guniibuu-Apdu Minor VII - Moon I Hold on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Debt-fleet anchor graveyard took shape before the catalog was sealed, the debt-fleet anchor graveyard is drifting the baselines on which Watch-Order Working Group was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-crowded: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The debt-fleet anchor graveyard drifts the baselines Yuyu's Field II relies on. The debt-fleet anchor graveyard drifts the baselines Yuyu's Field VIII relies on. Yuyu's Field II records a phase shift each time the Gardener warning beacon passes through.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The debt-fleet anchor graveyard is drifting the baselines on which Yuyu's Field II was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Intan's Crown Belt IX records a phase shift each time the moving bleed-node river passes through. Intan's Crown V records a phase shift each time the refugee ark parking orbit passes through. The moving bleed-node river introduces a measurable perturbation in Intan's Crown II. Intan's Crown Belt IX Station is the only major foothold on Intan's Crown Belt IX.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The moving bleed-node river is drifting the baselines on which Intan's Crown Belt IX was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The tilted crown drifts the baselines Vey Picket-265 Belt I relies on. The amplitude of the tilted crown exceeds the operating envelope of Vey Picket-265 Belt II. The long-period comet storm introduces a measurable perturbation in Vey Picket-265 Belt II. Pinchdrive accident scar sits on Vey Picket-265 Belt I. Vey Picket-265 Belt I hosts Vey Picket-265 Belt I Platform.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Tilted crown took shape between the calibration runs, the tilted crown is drifting the baselines on which Vey Picket-265 Belt I was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The chiral contamination bloom drifts the baselines Arneb Trace-209 IV relies on. Arneb Trace-209 IV records a phase shift each time the debt-fleet anchor graveyard passes through. The human vestibular/neurological effects drifts the baselines Arneb Trace-209 IV Station 85 relies on. Arneb Trace-209 IV hosts Arneb Trace-209 IV Station 85.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The chiral contamination bloom is shifting the operating envelope Arneb Trace-209 IV was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-fracture: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact refuses to recognize Orison Route Authority's authority. Red Vane Labor Combine disputes Veyra-Locke Concession's claim. The compact between Kestrel Free Compact and Red Vane Labor Combine has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Orison Route Authority broke in the second wave, Kestrel Free Compact and Orison Route Authority can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-high: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Sepulcher Archive Court disputes Veyra-Locke Concession's claim. The compact between Orison Route Authority and Veyra-Locke Concession has gone bad. Ninth Ledger Office refuses to recognize Pale Choir Communion's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Sepulcher Archive Court and Veyra-Locke Concession can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-low: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The public festival tied to safe transit windows is corroding Glasshouse Biosafety Compact. The tilted crown is corroding Glasshouse Biosafety Compact. Each pass of the failed Iggygate wake costs Glasshouse Biosafety Compact a margin it doesn't have.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Public festival tied to safe transit windows took shape after the first audit, the public festival tied to safe transit windows is rewriting the constants Glasshouse Biosafety Compact was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Helion Debt Synod refuses to recognize Orison Route Authority's authority. The compact between Helion Debt Synod and Sepulcher Archive Court has gone bad. Helion Debt Synod and Red Vane Labor Combine both want the Sheratan Trace-756 I.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Helion Debt Synod and Orison Route Authority broke during the convoy decade, Helion Debt Synod and Orison Route Authority can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;
